update git follow

--- a/build.yaml
+++ b/build.yaml
@@ -12,8 +12,12 @@
 #     shield: reviung41
 #
 ---
+
+
 include:
   - board: nrfmicro_13
     shield: dactyl_manuform_5x6_left
   - board: nrfmicro_13
     shield: dactyl_manuform_5x6_right
+  - board: nrfmicro_13
+    shield: settings_reset
