--- a/config/boards/shields/dactyl_manuform_5x6/dactyl_manuform_5x6.dtsi
+++ b/config/boards/shields/dactyl_manuform_5x6/dactyl_manuform_5x6.dtsi
@@ -46,3 +46,27 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)                   RC(3,11) RC(3,
 
     };
 };
+
+&i2c0 {
+    compatible = "nordic,nrf-twi";
+    pinctrl-0 = <&i2c0_default>;
+    pinctrl-1 = <&i2c0_sleep>;
+    pinctrl-names = "default", "sleep";
+    status = "okay";
+
+    oled: ssd1306@3c {
+        compatible = "solomon,ssd1306fb";
+        reg = <0x3c>;
+        label = "DISPLAY";
+        width = <128>;
+        height = <32>;
+        segment-offset = <0>;
+        page-offset = <0>;
+        display-offset = <0>;
+        multiplex-ratio = <31>;
+        //segment-remap;
+        //com-invdir;
+        com-sequential;
+        prechargep = <0x22>;
+    };
+};
