--- a/config/dactyl_manuform_5x6.conf
+++ b/config/dactyl_manuform_5x6.conf
@@ -1,13 +1,16 @@
-# Uncomment these two line to add support for encoders to your firmware
-# CONFIG_EC11=y
-# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+# Display
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 
-# Uncomment the following line to enable the OLED Display
-# CONFIG_ZMK_DISPLAY=y
+# Deep Sleep after 15min of inactivity
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
-# Uncomment the following lines to enable RGB underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
-
-#CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# Logging
 # CONFIG_ZMK_USB_LOGGING=y
+
+# Save config to flash more frequently
+# Default is 60s and this lowers it to 10
+# Only use this setting for debugging.
+# Prolonged use can lead to flash chip degradation
+# CONFIG_ZMK_SETTINGS_SAVE_DEBOUNCE 10000
