--- a/config/dactyl_manuform_5x6.conf
+++ b/config/dactyl_manuform_5x6.conf
@@ -1,7 +1,9 @@
 # Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
 # Deep Sleep after 15min of inactivity
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
