--- a/config/boards/shields/dactyl_manuform_5x6/dactyl_manuform_5x6.dtsi
+++ b/config/boards/shields/dactyl_manuform_5x6/dactyl_manuform_5x6.dtsi
@@ -63,7 +63,7 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)                   RC(3,11) RC(3,
         multiplex-ratio = <31>;
         segment-remap;
         com-invdir;
-//        com-sequential;
+        com-sequential;
         prechargep = <0x22>;
     };
 };
